@@ -39,13 +39,16 @@ columns even if they don't give more info: the extreme example is the id example
 require(data.table)
 data(messy_adult)
 
+# Reduce set size to save time (you can run it on full set)
+messy_adult = messy_adult[1:100, ]
+
 # Check for included columns
 whichAreIncluded(messy_adult)
 
 # Return columns that are also constant, double and bijection
 # Let's add a truly just included column
 messy_adult$are50OrMore <- messy_adult$age > 50
-whichAreIncluded(messy_adult)
+whichAreIncluded(messy_adult[, .(age, are50OrMore)])
 
 # As one can, see this column that doesn't have additional info than age is spotted.
 
